# chilldkg

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  msg.rs  transitions.rs
src/coordinator/: mod.rs  transitions.rs
src/crypto/: certeq.rs  ec.rs  enc.rs  mod.rs  poly.rs  pop.rs  schnorr.rs  tags.rs
src/math/: mod.rs
src/party/: mod.rs  transitions.rs
tests/: coordinator_finalize_vectors.rs  coordinator_step1_vectors.rs  participant_finalize_vectors.rs  participant_step1_vectors.rs  participant_step2_vectors.rs
tests/common/: mod.rs
tests/vectors/: coordinator_finalize_vectors.json  coordinator_step1_vectors.json  participant_step1_vectors.json  participant_step2_vectors.json
