[package]
name = "chilldkg"
version = "0.1.0"
edition = "2024"

[dependencies]
k256 = { version = "0.13", features = ["arithmetic", "expose-field", "hash2curve"], default-features = false }
curve25519-dalek = { version = "=4.1.3", features = ["rand_core"] }
sha2 = { version = "0.11", default-features = false }
anyhow = "1.0.102"
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
